--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="Description"><u>Description:</u></string>
     <string name="List_of_available_meetings"><u>List of available meetings:</u></string>
     <string name="Barbers_list"><u>Barbers list:</u></string>
-    <string name="Barbers_posts"><u>Posts:</u></string>
+    <string name="Barbers_posts"><u>Post:</u></string>
     <string name="Comments"><u>Comments:</u></string>
     <string name="Edit_works"><u>Edit works:</u></string>
     <string name="Calendar"><u>Calendar:</u></string>
